Changelog
=========

1.3.1 (unreleased)
------------------

- Make sure currency is included everywhere where a price is displayed.
  [lgraf]

1.3 (2013-09-05)
----------------

- Added image field to default ShopItem content type.
  [lgraf]

- Fixed content-type header of ajax response when adding an item to the cart.
  [buchi]


1.2.1 (2013-05-30)
------------------

- Remove unused permission "ftw.shop: Add Order".
  [jone]


1.2 (2013-05-28)
----------------

- Fixed evaluation of shopping cart portlet available() condition.
  [lgraf]

- Fixed attribute selector syntax in shop.js.
  [lgraf]

- Check enabled payment processors for availability before offering them.
  [lgraf]

- Moved shopping cart functionality into its own adapter (IShoppingCart).
  [lgraf]

- Dropped 'newsletter' field from checkout form.
  [lgraf]

- Lawgiver support: map permissions.
  [jone]

- Suppliers: fix address content types / formatting.
  [jone]

- Shop item: use text/x-html-safe output format and only allow text/html input.
  [jone]

- Plone 4.3 compatibility: fix imports.
  [jone]

- Use DEFAULT_VAT_RATES in IShopConfiguration's vat_rates.
  [mathias.leimgruber]

- Display the shopitems image if the item has a image field.
  [Julian Infanger]

- Fix category view so that it filters "None" references.
  [jone]

- Allow multiple email addresses for supplier seperated by comma.
  [Julian Infanger]

- Made sure supplier_mail template gets needed options
  [lgraf]

- Improved styling for PaymentProcessor widget a bit
  [lgraf]

- Made sure Order and CartItems classes inherit from Persistent
  [lgraf]

- Properly setting default values when prefilling forms.
  This fixes a bug where people see other users data in checkout forms.
  [lgraf]

- CSS fix for title field in checkout wizard
  [lgraf]

- Added some Plone 3 compatibility fixes
  [lgraf]

- Added test dependency on pyquery
  [lgraf]

- Fixed invalid HTML in payment processor widget
  [lgraf]
