@@ -4,6 +4,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Make ShopCategory LinguaPlone aware.
+  [buchi]
+
 - Make sure currency is included everywhere where a price is displayed.
   [lgraf]
 
